# Saturn

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.md  build.zig  build.zig.zon  gamepad_config.json  makeAppImage.sh  saturn.desktop
.zed/: debug.json
assets/: imgui.frag  imgui.vert  ship_parts.glb  tri.vert
assets/engine/materials/: olive.json_mat  teal.json_mat  transparent.json_mat
assets/engine/shaders/glsl/: alpha_mask_indirect.frag  alpha_mask_legacy.frag  build_indirect.comp  draw_indirect.vert  draw_legacy.vert  opaque_indirect.frag  opaque_legacy.frag  pbr_base.glsl
assets/lua_scripts/: log_test.lua
assets/materials/: grid.json_mat  olive.json_mat  purple.json_mat  teal.json_mat  uv_grid.json_mat
assets/models/: flat.glb  planet.glb
assets/shaders/: alpha_mask.frag.hlsl  colored.vert  opaque.frag.hlsl  physics_mesh.vert.hlsl  skybox.frag  test.vert.hlsl  whole_screen.vert
assets/shaders/glsl/: build_indirect.comp  draw_legacy.vert  opaque_indirect.frag  opaque_legacy.frag
assets/shaders/glsl/include/: indirect.glsl  mesh.glsl  (+1 more)
assets/shaders/sdl_gpu/: physics_mesh.frag
assets/shaders/vulkan/: alpha_cutoff.frag  bindless.hlsl  build_indirect.comp  draw_indirect.mesh  draw_indirect.task  draw_indirect.vert  imgui.frag  imgui.vert  mat_color.frag  mesh.mesh  mesh.vert  mesh_vert_load.vert  opaque.frag  physics_mesh.frag  physics_mesh.vert  static_mesh.mesh  static_mesh.vert  static_mesh_new.vert  triangle.frag  triangle.mesh  triangle.vert
glad/include/glad/: glad.h
glad/src/: glad.c
libs/saturn_jolt/: .clang-format  .gitignore  CMakeLists.txt  build.zig  build.zig.zon
libs/saturn_jolt/src/: body.cpp  body.hpp  callback_debug_renderer.cpp  callback_debug_renderer.hpp  mass_shape.cpp  math.hpp  memory.hpp  object_pool.hpp  saturn_jolt.cpp  saturn_jolt.h  saturn_jolt.zig  shape_pool.hpp  world.cpp  world.hpp
libs/saturn_physics/: .clang-format  CMakeLists.txt  build.zig  build.zig.zon
libs/saturn_physics/src/: character.cpp  character.hpp  collision_collector.hpp  contact_listener.cpp  contact_listener.hpp  generational_pool.hpp  gravity_step_listener.cpp  gravity_step_listener.hpp  jolt_allocator.hpp  layer_filters.hpp  math.hpp  memory.hpp  physics_world.cpp  physics_world.hpp  saturn_jolt.cpp  saturn_jolt.h  saturn_jolt.zig  shape_pool.hpp
libs/zdxc/: build.zig
libs/zdxc/src/: dxc.zig  dxc_wrapper.cpp
notes/: entity_system.md
res/models/: airlock.glb
res/shaders/: colored.frag  colored.vert  pbr_material.frag  pbr_material.vert  textured.frag  textured.vert
src/: GameWorld.zig  Input.zig  TaskPool.zig  app.zig  asset.zig  asset_main.zig  buffer.zig  c.zig  c_alloc.zig  camera.zig  containers.zig  core.zig  debug_camera.zig  device_resources.zig  entity.zig  fixed_array_list.zig  glfw_platform.zig  global.zig  gltf.zig  gltf2.zig  id_pool.zig  imgui.zig  input.zig  input2.zig  input3.zig  input_bindings.zig  kiss.zig  kiss_world.zig  linear_math.zig  main.zig  main_asset.zig  main_game.zig  main_render.zig  mesh.zig  obj.zig  object_pool.zig  physics.zig  platform.zig  procedural.zig  render_device.zig  (+25 more)
src/asset/: asset.zig  glsl.zig  gltf.zig  header.zig  hlsl.zig  io.zig  material.zig  mesh.zig  mesh2.zig  meshoptimizer.zig  obj.zig  registry.zig  scene.zig  shader.zig  stbi.zig  system.zig  texture.zig  texture_2d.zig  type.zig
src/entity/: enitty_system.zig  entity.zig  entity_system.zig  game.zig  node.zig  node_components.zig  universe.zig  world.zig  world_system.zig
src/entity/engine/: debug_camera.zig  physics.zig  rendering.zig
src/game/: airlock.zig  button.zig
src/linear_math/: matrix4.zig  quaternion.zig  vector2.zig  vector3.zig  vector4.zig
src/lua/: math.zig
src/math/: math.zig  quaternion.zig  vector2.zig  vector3.zig
src/opengl/: mesh.zig  shader.zig  vertex.zig
src/platform/: glfw.zig  imgui.zig  sdl2.zig  sdl3.zig
src/platform/opengl/: context.zig  mesh.zig  texture.zig
src/platform/sdl3/: controller.zig
src/platform/vulkan/: bindless_descriptor.zig  buffer.zig  device.zig  gpu_allocator.zig  imgui_renderer.zig  physical_device.zig  pipeline.zig  platform.zig  render_graph_executor.zig  swapchain.zig  texture.zig  vma_include.h
src/platform2/: imgui.zig  sdl3.zig
src/platform2/vulkan/: buffer.zig  device.zig  gpu_allocator.zig  imgui_renderer.zig  instance.zig  physical_device.zig  pipeline.zig  platform.zig  render_graph_executor.zig  texture.zig
src/renderer/: mesh.zig  mesh_manager.zig  pipeline.zig  render_graph.zig  renderer.zig  transfer_queue.zig
src/renderer/opengl/: mesh.zig  shader.zig  texture.zig  vertex.zig
src/rendering/: array_buffer.zig  asset_manager.zig  asset_pool.zig  backend.zig  camera.zig  culling.zig  gpu_pool.zig  imgui_renderer.zig  imgui_renderer2.zig  material.zig  material_pool.zig  mesh_pool.zig  mesh_shading.zig  physics_renderer.zig  render_graph.zig  render_thread.zig  renderer.zig  resources.zig  scene.zig  scene2.zig  scene_geometry.zig  scene_renderer.zig  scene_renderer2.zig  settings.zig  texture_pool.zig  transfer_queue.zig  types.zig  unified_geometry_buffer.zig  utils.zig  vulkan_render_thread.zig
src/rendering/opengl/: context.zig  mesh.zig  renderer.zig  shader.zig
src/rendering/sdl_gpu/: context.zig  device.zig  mesh.zig  physics_renderer.zig  renderer.zig  scene_renderer.zig  texture.zig
src/rendering/vulkan/: backend.zig  bindless_descriptor.zig  buffer.zig  device.zig  gpu_allocator.zig  image.zig  instance.zig  mesh.zig  object_pools.zig  physical_device.zig  physical_device_info.zig  pipeline.zig  render_graph.zig  render_pass.zig  sampler.zig  scene_renderer.zig  swapchain.zig  transfer_queue.zig  utils.zig  vulkan_device.zig
src/rendering2/: asset_pool.zig  gpu_pool.zig  material_pool.zig  mesh_pool.zig  scene_renderer.zig  texture_pool.zig  transfer_queue.zig
src/utils/: obj_loader.zig
src/vulkan/: buffer.zig  descriptor_set.zig  device.zig  device_allocator.zig  device_resources.zig  image.zig  instance.zig  resource_deleter.zig  swapchain.zig  texture.zig  transfer_queue.zig  vk.zig  vulkan.zig
(+23 files in other folders)
