#Fake CMAKE file so editors can find sources + includes
cmake_minimum_required(VERSION 3.30)
project(saturn_physics)

set(CMAKE_CXX_STANDARD 17)

include_directories(JoltPhysics-5.0.0/)
include_directories(src)

add_library(saturn_physics
        "src/saturn_jolt.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/TickCounter.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/Factory.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/Memory.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/JobSystemThreadPool.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/StringTools.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/JobSystemSingleThreaded.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/Color.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/IssueReporting.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/LinearCurve.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/JobSystemWithBarrier.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/Profiler.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/RTTI.cpp"
        "JoltPhysics-5.0.0/Jolt/Core/Semaphore.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/ObjectStreamIn.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/ObjectStreamBinaryOut.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/ObjectStreamTextOut.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/TypeDeclarations.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/ObjectStream.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/ObjectStreamOut.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/ObjectStreamBinaryIn.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/SerializableObject.cpp"
        "JoltPhysics-5.0.0/Jolt/ObjectStream/ObjectStreamTextIn.cpp"
        "JoltPhysics-5.0.0/Jolt/Skeleton/SkeletonPose.cpp"
        "JoltPhysics-5.0.0/Jolt/Skeleton/SkeletalAnimation.cpp"
        "JoltPhysics-5.0.0/Jolt/Skeleton/Skeleton.cpp"
        "JoltPhysics-5.0.0/Jolt/Skeleton/SkeletonMapper.cpp"
        "JoltPhysics-5.0.0/Jolt/AABBTree/AABBTreeBuilder.cpp"
        "JoltPhysics-5.0.0/Jolt/RegisterTypes.cpp"
        "JoltPhysics-5.0.0/Jolt/Renderer/DebugRenderer.cpp"
        "JoltPhysics-5.0.0/Jolt/Renderer/DebugRendererPlayback.cpp"
        "JoltPhysics-5.0.0/Jolt/Renderer/DebugRendererRecorder.cpp"
        "JoltPhysics-5.0.0/Jolt/Renderer/DebugRendererSimple.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleGrouper/TriangleGrouperMorton.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleGrouper/TriangleGrouperClosestCentroid.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/SoftBody/SoftBodySharedSettings.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/SoftBody/SoftBodyShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/SoftBody/SoftBodyMotionProperties.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/SoftBody/SoftBodyCreationSettings.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleController.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleTransmission.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleEngine.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/Wheel.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/WheeledVehicleController.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/MotorcycleController.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleAntiRollBar.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleTrack.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/TrackedVehicleController.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleDifferential.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleCollisionTester.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Vehicle/VehicleConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/PhysicsUpdateContext.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Ragdoll/Ragdoll.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/DeterminismLog.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/PhysicsSystem.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Body/BodyManager.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Body/Body.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Body/BodyInterface.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Body/BodyAccess.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Body/MotionProperties.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Body/MassProperties.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Body/BodyCreationSettings.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/PhysicsLock.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/LargeIslandSplitter.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/Constraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/PulleyConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/DistanceConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/TwoBodyConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/GearConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/SixDOFConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/PathConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/PathConstraintPath.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/ConeConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/MotorSettings.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/SliderConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/SpringSettings.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/ContactConstraintManager.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/FixedConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/ConstraintManager.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/SwingTwistConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/HingeConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/RackAndPinionConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/PointConstraint.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Constraints/PathConstraintPathHermite.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Character/CharacterVirtual.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Character/CharacterBase.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Character/Character.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/IslandBuilder.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/PhysicsScene.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/StateRecorderImpl.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/TransformedShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/CastConvexVsTriangles.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/CollisionGroup.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/CollideSphereVsTriangles.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/ManifoldBetweenTwoFaces.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/OffsetCenterOfMassShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/RotatedTranslatedShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/ConvexShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/BoxShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/MeshShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/ConvexHullShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/ScaledShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/CompoundShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/CapsuleShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/TaperedCapsuleShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/DecoratedShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/Shape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/CylinderShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/SphereShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/StaticCompoundShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/HeightFieldShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/MutableCompoundShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/Shape/TriangleShape.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/CollideConvexVsTriangles.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/EstimateCollisionResponse.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/PhysicsMaterial.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/BroadPhase/BroadPhaseBruteForce.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/BroadPhase/BroadPhase.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/BroadPhase/BroadPhaseQuadTree.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/BroadPhase/QuadTree.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/NarrowPhaseStats.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/GroupFilter.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/CastSphereVsTriangles.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/PhysicsMaterialSimple.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/GroupFilterTable.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/CollisionDispatch.cpp"
        "JoltPhysics-5.0.0/Jolt/Physics/Collision/NarrowPhaseQuery.cpp"
        "JoltPhysics-5.0.0/Jolt/Math/Vec3.cpp"
        "JoltPhysics-5.0.0/Jolt/Geometry/Indexify.cpp"
        "JoltPhysics-5.0.0/Jolt/Geometry/OrientedBox.cpp"
        "JoltPhysics-5.0.0/Jolt/Geometry/ConvexHullBuilder.cpp"
        "JoltPhysics-5.0.0/Jolt/Geometry/ConvexHullBuilder2D.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleSplitter/TriangleSplitterFixedLeafSize.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleSplitter/TriangleSplitterMean.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleSplitter/TriangleSplitter.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleSplitter/TriangleSplitterBinning.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleSplitter/TriangleSplitterMorton.cpp"
        "JoltPhysics-5.0.0/Jolt/TriangleSplitter/TriangleSplitterLongestAxis.cpp"
        src/contact_listener.hpp
        src/physics_world.hpp
        src/layer_filters.hpp
        src/physics_world.cpp
        src/memory.hpp
        src/contact_listener.cpp)
